@@ -6,7 +6,8 @@ New features
 -
 Bug fixes
 ~~~~~~~~~
--
+- #1903: Notifications are received twice and/or received by the sender email
+  address.
 New internal features
 ~~~~~~~~~~~~~~~~~~~~~
 - 
